--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,3 +12,33 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+.video-container {
+  width: 500px;
+  height: 380px;
+  margin: 0 auto;
+  border: 2px solid #ccc;
+  position: relative;
+  box-shadow: 1px 1px 11px #000;
+
+  .my-video {
+    width: 130px;
+    position: absolute;
+    left: 10px;
+    bottom: 10px;
+    border: 3px solid #ccc;
+    border-radius: 5px;
+    z-index: 2;
+  }
+
+  .user-video {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+}
